# ASTRID-1

./: .gitignore  ASTRID  ASTRID.py  ASTRID.spec  CHANGES  DistanceMethods.py  PatristicDistanceMatrix.py  README.md  index.html  params.json  pynjst.py  setup.py  tutorial.md
distmethods/: install.sh
src/: ASTRID.py  CMakeLists.txt  DistanceMethods.py  Server.py  __init__.py  fdm.pyx  koremutake.py
src/cpp/: BitVector.cpp  BitVector.hpp  CMakeLists.txt  Logger.cpp  Logger.hpp  Options.cpp  Options.hpp  README  TaxonSet.cpp  TaxonSet.hpp  makemat.cpp  newick.hpp
src/distmethods/: install.sh
src/py/: ASTRID  ASTRID.py  CMakeLists.txt  DistanceMethods.py  setup.py.in
src/static/: ASTRID.js
src/templates/: ASTRID.html
test/: song_mammals.424.gene.tre
